--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>2026 麻將日誌</title>
+    <link rel="icon" href="icon.jpg" type="image/png">
+    <link rel="apple-touch-icon" href="icon.jpg">
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Lucide 圖示 -->
